09/09/2022:
	- Fix to incorrect decoding of virtual levels within OpenJPEG: resolves https://github.com/ruven/iipsrv/issues/235


06/09/2022:
	- Added support for reading POST, PUT and other HTTP methods


02/09/2022:
	- Added XMP metadata support for Kakadu


23/07/2022:
	- Fix to IIIF parsing problem when requesting certain region sizes at "full" size


22/06/2022:
	- Large number of small changes including: conversion of functions to const functions, change of string parameters to
	  const reference and other const-related changes that fix the code analysis suggestions provided by SonarCloud


02/06/2022:
	- Corrected throw in FIF.cc to rethrow original exception and not make a copy.
	- Improved detection of pure tile requests in IIIF.cc. Improvements also to View class to eliminate rounding errors
	  when calculating view sizes.


30/05/2022:
	- Added check to output encoders (JPEG, PNG and WebP) to make sure we don't delete memory from RawTiles that is not
	  owned by the RawTile itself


26/05/2022:
	- Standardized all pixel index counters to type uint32_t in Transforms.cc and RawTile.h with added type-casting when
	  necessary. Fixes CodeQL warnings about potential integer overflow.


25/05/2022:
	- Changes to improve logging of timer reporting and addition of std::chrono to Timer.h for supported platforms


23/05/2022:
	- Fix to IIIF.cc to better determine whether a request is for a tile and suitable to be passed to JTL.
	  Fixes problem identified in: https://github.com/ruven/iipsrv/issues/228


22/05/2022:
	- Removed unnecessary <iostream> includes.
	- Tweak to Kakadu configure and updated concurrency check in KakaduImage.cc to use C++11 std::thread if available.


20/05/2022:
	- Added WebP output support. Both tile and region output are supported for both IIP and IIIF. Individual tiles can
	  be requested using the WTL paramter which works in the same way as PTL for PNG and JTL for JPEG. CVT region