@@ -1,3 +1,7 @@
+21/09/2021:
+	- Further disabled overly stringent ICC profile checks in libpng. Fixes https://github.com/ruven/iipsrv/issues/239
+
+
 09/09/2022:
 	- Fix to incorrect decoding of virtual levels within OpenJPEG: resolves https://github.com/ruven/iipsrv/issues/235
 
